# Intelligent-Software-engineer-training-camp-homework

./: .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  cold_start_prompt.txt  config.yaml  demo_mechanism.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
docs/superpowers/plans/: 2026-07-07-coding-agent-harness.md
harness/: cli.py  config.py  credentials.py
harness/core/: action.py  llm.py  loop.py
harness/feedback/: classifier.py  validator.py
harness/governance/: guardrail.py  hitl.py  middleware.py  sandbox.py
harness/memory/: store.py
harness/tools/: dispatcher.py  file_tools.py  shell_tool.py  test_tool.py
harness/webui/: app.py
harness/webui/static/: index.html
tests/: conftest.py  test_action.py  test_config.py  test_credentials.py  test_feedback.py  test_governance_middleware.py  test_guardrail.py  test_hitl.py  test_llm.py  test_loop.py  test_memory.py  test_sandbox.py  test_tool_dispatcher.py  test_tools.py  test_webui.py
