[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-harness"
version = "0.1.0"
description = "A self-implemented coding agent harness with governance focus"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "openai>=1.30",
    "keyring>=25.0",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-json-report>=0.5",
]

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
